--- a/TakeAwaySys/TakeAwaySys/TakeAwaySys.vcxproj.filters
+++ b/TakeAwaySys/TakeAwaySys/TakeAwaySys.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="Address.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="FoodItem.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Employee.h">
@@ -33,6 +36,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Graphics.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="FoodItem.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
