--- a/TakeAwaySys/TakeAwaySys/TakeAwaySys.vcxproj
+++ b/TakeAwaySys/TakeAwaySys/TakeAwaySys.vcxproj
@@ -120,6 +120,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalOptions>/FORCE %(AdditionalOptions)</AdditionalOptions>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -142,6 +143,7 @@
     <ClCompile Include="Address.cpp" />
     <ClCompile Include="Employee.cpp" />
     <ClCompile Include="FoodItem.cpp" />
+    <ClCompile Include="ScrClnTM.cpp" />
     <ClCompile Include="TakeAwaySys.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -149,6 +151,7 @@
     <ClInclude Include="Employee.h" />
     <ClInclude Include="FoodItem.h" />
     <ClInclude Include="Graphics.h" />
+    <ClInclude Include="ScrClnTM.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
