--- a/TakeAwaySys/TakeAwaySys/TakeAwaySys.vcxproj.filters
+++ b/TakeAwaySys/TakeAwaySys/TakeAwaySys.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="FoodItem.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ScrClnTM.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Employee.h">
@@ -39,6 +42,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="FoodItem.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ScrClnTM.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
