--- a/TakeAwaySys/TakeAwaySys/TakeAwaySys.vcxproj.filters
+++ b/TakeAwaySys/TakeAwaySys/TakeAwaySys.vcxproj.filters
@@ -24,9 +24,6 @@
     <ClCompile Include="FoodItem.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="ScrClnTM.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Employee.h">
@@ -35,13 +32,10 @@
     <ClInclude Include="Address.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Graphics.h">
+    <ClInclude Include="AJTools.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="FoodItem.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="ScrClnTM.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
