dev-sync (testing)

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 ################################################################################
 
 /TakeAwaySys/.vs/TakeAwaySys/v17/Preview/Browse.VC.opendb
+/TakeAwaySys/Notes/Doxygen
