--- a/TakeAwaySys/TakeAwaySys.vcxproj.filters
+++ b/TakeAwaySys/TakeAwaySys.vcxproj.filters
@@ -18,12 +18,6 @@
     <ClCompile Include="TakeAwaySys.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Employee.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="Address.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Employee.h">
@@ -32,7 +26,10 @@
     <ClInclude Include="Address.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Graphics.h">
+    <ClInclude Include="AJTools.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="FoodItem.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
